--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,45 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Cache SBT ivy cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.ivy2/cache
+          key: ${{ runner.os }}-sbt-ivy-cache
+
+      - name: Cache SBT
+        uses: actions/cache@v1
+        with:
+          path: ~/.sbt
+          key: ${{ runner.os }}-sbt
+
+      - name: Cache coursier cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.cache/coursier
+          key: ${{ runner.os }}-coursier
+
+      - name: Cache project
+        uses: actions/cache@v1
+        with:
+          path: ./
+          key: ${{ runner.os }}-project
+
+      - name: Checkout current
+        run: git checkout . && git clean -f
       - name: Run tests
         run: sbt cachedCiTest
+      - name: Clean caches
+        run: |
+          rm -fv ~/.ivy2/.sbt.ivy.lock
+          find ~/.ivy2/cache -name "ivydata-*.properties" -print -delete
+          find ~/.sbt        -name "*.lock"               -print -delete
+          rm -rf ./.git
+          rm -rf ./project/target #clean doesn't clean meta-build
+        
