--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,28 +18,32 @@ jobs:
           java-version: 1.8
 
       - name: Cache SBT ivy cache
-        uses: actions/cache@v1
+        uses: actions/cache@v1.1.2
         with:
           path: ~/.ivy2/cache
-          key: ${{ runner.os }}-sbt-ivy-cache
+          key: ${{ runner.os }}-sbt-ivy-cache-${{ github.run_number }}
+          restore-keys: ${{ runner.os }}-sbt-ivy-cache
 
       - name: Cache SBT
-        uses: actions/cache@v1
+        uses: actions/cache@v1.1.2
         with:
           path: ~/.sbt
-          key: ${{ runner.os }}-sbt
+          key: ${{ runner.os }}-sbt-${{ github.run_number }}
+          restore-keys: ${{ runner.os }}-sbt
 
       - name: Cache coursier cache
-        uses: actions/cache@v1
+        uses: actions/cache@v1.1.2
         with:
           path: ~/.cache/coursier
-          key: ${{ runner.os }}-coursier
+          key: ${{ runner.os }}-coursier-${{ github.run_number }}
+          restore-keys: ${{ runner.os }}-coursier
 
       - name: Cache project
-        uses: actions/cache@v1
+        uses: actions/cache@v1.1.2
         with:
           path: ./
-          key: ${{ runner.os }}-project
+          key: ${{ runner.os }}-project-${{ github.run_number }}
+          restore-keys: ${{ runner.os }}-project
 
       - name: Checkout current
         run: git checkout . && git clean -f
