--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 
 before_cache:
   - rm -fv $HOME/.ivy2/.sbt.ivy.lock
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete || echo "empty ivy cache"
   - find $HOME/.sbt        -name "*.lock"               -print -delete
   - rm -rf ./.git
   - rm -rf ./project/target #clean doesn't clean meta-build
