--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,4 +33,5 @@ jobs:
             - ~/.cache/coursier
             - ./
           key: v1-dependencies-{{ .Branch }}-{{ epoch }}
-
+    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
+    resource_class: large
