--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Set up SBT
+        uses: sbt/setup-sbt@v1
+
       - name: Cache SBT ivy cache
         uses: actions/cache@v3
         with:
